--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,15 @@
 site_name: GeaFlow Docs
 
-theme: readthedocs
+theme:
+  name: null
+  custom_dir: './docs/.cinder'
 
 plugins:
   - include-markdown
 
 markdown_extensions:
   - toc:
-      toc_depth: 6
+      toc_depth: 4
 
 python_version: 3.8 # use Python 3.8
 jinja2:
